fix issue of icon not found; fix issue of navigation

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <div class="page__footer-copyright">
-    <img style="vertical-align:bottom" src="favicon-32x32.png"/> 
+    <img style="vertical-align:bottom" src="/guitar/favicon-32x32.png"/> 
     <span>
         &copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}.
         {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }}
